Apache 2.4 fixes, Readme update

--- a/autoindex.conf
+++ b/autoindex.conf
@@ -4,7 +4,7 @@
 # We include the /icons/ alias for FancyIndexed directory listings.  If
 # you do not use FancyIndexing, you may comment this out.
 #
-Alias /autoindex/ "/Users/Einar/Dropbox/Projects/other/Apache-Autoindex-Style/"
+Alias /autoindex/ "PATH-TO-THIS/Apache-2.4-Autoindex-Style-main/"
 
 <Directory "/usr/share/httpd/icons">
     Options Indexes MultiViews
@@ -14,10 +14,10 @@ Alias /autoindex/ "/Users/Einar/Dropbox/Projects/other/Apache-Autoindex-Style/"
 </Directory>
 
 
-<Directory "/Users/Einar/Dropbox/Projects/other/Apache-Autoindex-Style/">
+<Directory "PATH-TO-THIS/Apache-2.4-Autoindex-Style-main/">
     Options Indexes MultiViews
-    AddHandler application/x-httpd-php .html
-
+    AddHandler application/x-httpd-php .php
+    AddType text/html .php
     AllowOverride None
     Order allow,deny
     Allow from all
