--- a/autoindex.conf
+++ b/autoindex.conf
@@ -88,6 +88,6 @@ HeaderName /autoindex/header.html
 # IndexIgnore is a set of filenames which directory indexing should ignore
 # and not include in the listing.  Shell-style wildcarding is permitted.
 #
-IndexIgnore autoindex .??* *~ *# RCS CVS *,v *,t
+IndexIgnore autoindex .??* *~ *# RCS CVS *,v *,t Thumbs.db
 
 </IfModule>
